Fix shelf alignment locking for power button.

Only lock the shelf once the lock animation starts.
(do not lock earlier, on the pre-lock animation start)
Add Alt-L (Lock) and Alt-P (Power) --ash-debug-shortcuts.

BUG=614042
TEST=Quickly tapping power/lock doesn't lock the shelf.
R=oshima@chromium.org

Review-Url: https://codereview.chromium.org/2013933002
Cr-Commit-Position: refs/heads/master@{#396599}

Former-commit-id: dbd05211a0cbffa1bcd40888503c2cffeeb0d8ea